fixed bug overflow

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,4 +9,5 @@
 
 .fdb-block{
   padding: 20px 0px;
+  overflow: visible !important;
 }
